# Raytracer

./: .gitignore  CMakeLists.txt  Intersection.cpp  Intersection.h  camera.cpp  camera.h  constants.h  halfspace.cpp  halfspace.h  hit.cpp  intersection.cpp  intersection.h  luminaire.cpp  luminaire.h  main.cpp  radiance.cpp  radiance.h  ray.cpp  ray.h  scene.cpp  scene.h  shader.cpp  shader.h  target.cpp  target.h  triangle.cpp  triangle.h
 Shapes/: halfspace.cpp  halfspace.h  plane.cpp  plane.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
Helpers/: RGBA.h  image.cpp  image.h  random.h  rgb.cpp  rgb.h  typedefs.h
Helpers/Matrices/: transform.cpp  transform.h
Helpers/Space/: apoint.cpp  apoint.h  hvector.cpp  hvector.h  point2.cpp  point2.h  point3.cpp  point3.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h
Helpers/Vectors/: Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  avector.cpp  avector.h  hvector.h
Lighting/: directionalLuminaire.h  luminaire.h  pointLuminaire.h
Materials/: basicMaterial.h  dielectric.h  diffuserShader.h  material.h  perlinMaterial.h  perlinPlanetMaterial.h  reflector.h  shader.h  surfaceNormalMaterial.h
Shapes/: box.h  perlinSphere.h  plane.h  planetoid.h  sphere.h  triangle.h
perlin_lewis/: allocarray.h  getopt_longer.c  getopt_longer.h  perlin.c  perlin.h  perlin_extrema.c  perlin_generator.c
